--- a/日志接入流程.md
+++ b/日志接入流程.md
@@ -1,17 +1,26 @@
 
 
 http://github.com
-## 日志接入流程
+## eval suspend功能使用文档
 
- 1. 创建kafka topic
- `/opt/kafka/kafka_2.12-0.11.0.0/bin/kafka-topics.sh --create --zookeeper 172.28.217.172:2181 --replication-factor1 --partitions 10 --topic kubelet`
- 2. 配置logstash
-修改consumer topic、grok等信息
- 3. 配置filebeat
- 设置log文件，topic等信息
- 4. 启动logstash及filebeat
- `docker run -dti -v /export/filebeat/filebeat.yml:/filebeat.yml -v /var/log/kubernetes/:/var/log/kubernetes/ -h 172.28.217.100 mirror.jd.com/pino/filebeat-logging`
- `docker run -dti --name logstash-logging-kubelet --hostname172.18.152.96 -v /export/logstash/data:/data mirror.jd.com/pino/logstash-logging -f /data/logstash.conf_kubelet`
- 
- 
- 
+### 启动任务
+`pinoctl eval --force --suspend --group=ads-model-pinocloud ./demos/mnist.SR`
+注意：
+1 加入--suspend参数
+2 将eval用data放入project指定位置，或者只需保证tty进入环境后PinoAI指定目录有eval用data即可
+### tty
+执行pinoctl eval后，执行pinoctl list，会刚才启动的eval任务，tty登录，会看到eval_client.sh脚本
+![enter description here][1]
+### 进行eval
+  执行命令eval_client.sh 后加modelid参数
+  `./eval_client.sh c51b3f8abaed11e7bfd840f2e9cf3a82`
+   ![enter description here][2]
+  正常情况下，会如图提示Run Eval in Background.Please check the eval log，表示启动eval成功，eval任务后台运行。可以在/export/App/training_platform/PinoModel/==real_log #800023==目录下看到每次eval的日志和结果目录，改目录的命名规则为`eval_log_${model_id}_时间`
+![enter description here][3]
+
+
+  [1]: ./images/1511507560818.jpg
+  [2]: ./images/1511508184519.jpg
+  [3]: ./images/1511508431875.jpg
+  ### 回收eval
+  多次eval完成后，请自行使用scp拷贝eval结果和日志，不要使用pinoctl release操作，release不会持久化real_log下的文件。
